--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -41,6 +41,7 @@
         
         {% if site.avatar %}
         <a class="image avatar"><img src="{{ site.avatar }}" alt="avatar" /></a>
+        <div class="photo-credit">Photo credit: Poorvi </div>
         {% endif %}
 
         <h1>{{ site.title }}</h1>
@@ -50,7 +51,7 @@
         <br>
         {% endif %}
         {% if site.affiliation %}
-        <a href="{{ site.affiliation_link }}" rel="noopener"><autocolor>{{ site.affiliation }}</autocolor></a>
+        <a href="https://www.sfu.ca" target="_blank" rel="noopener">Simon Fraser University</a>
         <br>
         {% endif %}
         {% if site.email %}
